[gd_scene load_steps=26 format=3 uid="uid://cxvs0ubbipl35"]

[ext_resource type="Script" path="res://Scenes/Units/player_unit.gd" id="1_b776y"]
[ext_resource type="Script" path="res://Scenes/Units/state_machine.gd" id="2_us0md"]
[ext_resource type="Script" path="res://Scenes/States/Player States/idle_state.gd" id="3_2iym7"]
[ext_resource type="Script" path="res://Scenes/States/Player States/move_state.gd" id="4_jlt6l"]
[ext_resource type="Script" path="res://Scenes/States/Player States/attack_state.gd" id="6_3pdj6"]
[ext_resource type="Script" path="res://Scenes/States/Player States/unconscious_state.gd" id="6_yjtio"]
[ext_resource type="Script" path="res://Scenes/States/Player States/revive_state.gd" id="8_5ttnm"]
[ext_resource type="Script" path="res://Scenes/States/Player States/interact_state.gd" id="8_voe6n"]
[ext_resource type="Script" path="res://wasd_movement_component.gd" id="9_0efpd"]
[ext_resource type="PackedScene" uid="uid://ya6n76mrdy5b" path="res://Scenes/Interface/health_bar.tscn" id="9_hb35g"]
[ext_resource type="AudioStream" uid="uid://dn2ndnkqbgbvo" path="res://Sound/9mm-pistol-shoot-short-reverb-7152.mp3" id="10_2kui5"]
[ext_resource type="AudioStream" uid="uid://bkfdqtp4ekaaf" path="res://Sound/rifle-clip-empty-98832.mp3" id="11_7sg32"]
[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="11_cpb60"]
[ext_resource type="AudioStream" uid="uid://b1uowvayrvgkd" path="res://Sound/1911-reload-6248.mp3" id="11_vvwcf"]
[ext_resource type="AudioStream" uid="uid://cm401tc48yjmd" path="res://Sound/UI/confirmation_002.ogg" id="15_1vmhr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ablmn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pbu37"]
radius = 93.0215

[sub_resource type="Animation" id="Animation_t56vo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackLine:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}

[sub_resource type="Animation" id="Animation_nwfdx"]
resource_name = "aim_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackLine:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7runw"]
_data = {
"RESET": SubResource("Animation_t56vo"),
"aim_animation": SubResource("Animation_nwfdx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tjobb"]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Gradient" id="Gradient_o1o5u"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fxuti"]
gradient = SubResource("Gradient_o1o5u")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.834862, 0.224771)

[sub_resource type="Curve" id="Curve_3xcw1"]
_data = [Vector2(0, 0.78022), 0.0, 0.0, 0, 0, Vector2(1, 0.637363), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0xn4u"]
colors = PackedColorArray(1, 1, 1, 0.423529, 1, 1, 1, 0)

[node name="PlayerUnit" type="RigidBody2D"]
collision_layer = 2
collision_mask = 8
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 10
linear_damp_mode = 1
linear_damp = 15.0
script = ExtResource("1_b776y")
aim_color = Color(1, 1, 1, 0.196078)
attack_color = Color(1, 0, 0, 0.392157)
queued_color = Color(1, 0.647059, 0, 0.196078)
background_color = Color(0, 0, 0, 0.196078)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_us0md")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("action_one_state", "unconscious_state", "revive_state", "interact_state")]
script = ExtResource("3_2iym7")
action_one_state = NodePath("../ActionOne")
unconscious_state = NodePath("../Unconscious")
revive_state = NodePath("../Revive")
interact_state = NodePath("../Interact")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "action_one_state", "unconscious_state")]
script = ExtResource("4_jlt6l")
idle_state = NodePath("../Idle")
action_one_state = NodePath("../ActionOne")
unconscious_state = NodePath("../Unconscious")

[node name="Unconscious" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("6_yjtio")
idle_state = NodePath("../Idle")

[node name="ActionOne" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "unconscious_state")]
script = ExtResource("6_3pdj6")
idle_state = NodePath("../Idle")
unconscious_state = NodePath("../Unconscious")

[node name="Timer" type="Timer" parent="StateMachine/ActionOne"]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Revive" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "action_one_state", "move_state", "unconscious_state")]
script = ExtResource("8_5ttnm")
idle_state = NodePath("../Idle")
action_one_state = NodePath("../ActionOne")
move_state = NodePath("../Move")
unconscious_state = NodePath("../Unconscious")

[node name="Timer" type="Timer" parent="StateMachine/Revive"]
one_shot = true

[node name="Interact" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "action_one_state", "move_state", "unconscious_state")]
script = ExtResource("8_voe6n")
idle_state = NodePath("../Idle")
action_one_state = NodePath("../ActionOne")
move_state = NodePath("../Move")
unconscious_state = NodePath("../Unconscious")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("9_0efpd")
max_speed = 12000.0
acceleration = 12000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.262431, 0.639506, 1, 1)
material = SubResource("ShaderMaterial_ablmn")
scale = Vector2(4, 4)
texture = ExtResource("11_cpb60")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pbu37")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="AimLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 100, 0)
width = 15.0
antialiased = true

[node name="AttackLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 500, 0)
antialiased = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackLine"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7runw")
}

[node name="ActionOneReloadTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="SecondaryReloadTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="ShortcutLabel" type="Label" parent="."]
visible = false
offset_left = -65.0
offset_top = -64.0
offset_right = -25.0
offset_bottom = -9.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "1"

[node name="HealthBar" parent="." instance=ExtResource("9_hb35g")]
visible = false
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 72.0
grow_vertical = 0

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -61.0
offset_top = -98.0
offset_right = 58.0
offset_bottom = -75.0
text = "State: Idle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_tjobb")
debug_color = Color(0.660559, 0.514788, 3.85046e-07, 0.0784314)

[node name="MoveLine" type="Line2D" parent="."]

[node name="GunshotSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_2kui5")
pitch_scale = 0.8
max_distance = 20000.0
max_polyphony = 10

[node name="ReloadSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_vvwcf")
max_distance = 10000.0
max_polyphony = 10

[node name="AttackNotReadySoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_7sg32")
pitch_scale = 0.8
max_distance = 10000.0
max_polyphony = 10

[node name="Arm" type="Node2D" parent="."]

[node name="ArmSprite" type="Sprite2D" parent="Arm"]
visible = false
position = Vector2(63, 30)
scale = Vector2(2.8125, 1)
texture = ExtResource("11_cpb60")

[node name="PointLight2D" type="PointLight2D" parent="Arm"]
visible = false
position = Vector2(-88, 93)
color = Color(1, 1, 0.784314, 1)
energy = 5.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_fxuti")
texture_scale = 8.0

[node name="AimCone" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="QueuedCones" type="Node2D" parent="."]

[node name="AttackFullCone" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="AttackCone" type="Polygon2D" parent="AttackFullCone"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 100, 5, 100, -4)

[node name="Effects" type="Node" parent="."]

[node name="ChargeParticles" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 0.2
emission_shape = 2
emission_sphere_radius = 47.54
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 800.0
scale_amount_min = 10.0
scale_amount_max = 10.0
split_scale = true
scale_curve_x = SubResource("Curve_3xcw1")
scale_curve_y = null
color = Color(0, 0.890196, 1, 1)
color_ramp = SubResource("Gradient_0xn4u")

[node name="ActiveReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_1vmhr")
volume_db = -7.0
pitch_scale = 1.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
